--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/socialmeals
+spring.datasource.username = userSocialMeals
+spring.datasource.password = pwSocialMeals
 
+spring.jpa.hibernate.ddl-auto = create
