SM-1 added basic CSS and HTML

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url = jdbc:mysql://localhost:3306/socialmeals
 spring.datasource.username = userSocialMeals
 spring.datasource.password = pwSocialMeals
 
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
